<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".GameTwoActivity"
    android:weightSum="3"
    android:background="@color/yellow_lighter">

    <TextView
        android:id="@+id/text_headerGameTwo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/text_headerGameTwo"
        android:textSize="30sp"
        android:textColor="@color/brown_medium"
        android:background="@color/yellow_darker"
        android:gravity="center"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/text_questionGameTwo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/text_questionGameTwo"
        android:textSize="30sp"
        android:textColor="@color/brown_medium"
        android:background="@color/yellow_darker"
        android:gravity="center"
        android:layout_weight="1.5"/>

    <EditText
        android:id="@+id/editText_gameTwoAnswerEntry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/text_hint_mathEntryAnswers"
        android:layout_weight="0.5"
        android:inputType="number"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_gameTwoAnswer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/button_gameTwoAnswerButton"
        style="@style/ButtonStyle_darkText_LightButton"
        android:onClick="onClickAnswer"
        app:strokeColor="@color/brown_medium"
        app:strokeWidth="5dp"
        android:layout_weight="0.5"/>

</LinearLayout>