<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/linearLayout_mainMenuText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="0.5">

    <TextView
        android:id="@+id/text_mainMenuHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text_mainMenuHeader"
        android:textSize="30sp"
        android:textColor="@color/brown_medium"
        android:background="@color/yellow_darker"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_mainMenuButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:background="@color/yellow_medium">

        <Button
            android:id="@+id/button_playGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_playGame"
            android:onClick="onClickMenuOption"
            style="@style/ButtonStyle_darkText_LightButton"/>

        <Button
            android:id="@+id/button_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_options"
            android:onClick="onClickMenuOption"
            style="@style/ButtonStyle_darkText_LightButton"/>

        <Button
            android:id="@+id/button_leaderboards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_leaderBoards"
            android:onClick="onClickMenuOption"
            style="@style/ButtonStyle_darkText_LightButton"/>

    </LinearLayout>

</LinearLayout>